--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,6 @@
-<h1>Librory Page</h1>
-
+<h5>App Name: </h5>
+<p>{{ app_name }}</p> 
 <h5>Name: </h5>
 <p>{{ name }}</p> 
-<h5>Amount: </h5>
-<p>{{ amount }}</p> 
-<h5>Description: </h5>
-<p>{{ description }}</p> 
+<h5>Class: </h5>
+<p>{{ class }}</p> 
