--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,42 @@
-<h5>App Name: </h5>
-<p>{{ app_name }}</p> 
-<h5>Name: </h5>
-<p>{{ name }}</p> 
-<h5>Class: </h5>
-<p>{{ class }}</p> 
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1>Librory Page</h1>
+
+    <h5>Name:</h5>
+    <p>{{name}}</p>
+
+    <h5>Class:</h5>
+    <p>{{class}}</p>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Amount</th>
+            <th>Rented</th>
+            <th>Category</th>
+            <th>Description</th>
+        </tr>
+
+        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
+
+        {% for item in items %}
+            <tr>
+                <td>{{item.name}}</td>
+                <td>{{item.amount}}</td>
+                <td>{{item.rented}}</td>
+                <td>{{item.category}}</td>
+                <td>{{item.description}}</td>
+            </tr>
+        {% endfor %}
+    </table>
+
+    <br />
+
+    <a href="{% url 'main:create_item' %}">
+        <button>
+            Add New Item
+        </button>
+    </a>
+
+{% endblock content %}
